--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../templates/chatbot.html">
+    <link rel="stylesheet" type="text/css" href="../templates/chatbot.css">
 
     <title>Chatbot Page</title>
     <link rel="icon" type="image/png" href="../static/musicrecco.png"/>
