--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
             <span class="txt1">
                 Don't have an account?
             </span>
-            <a class="txt2" href="#">s
+            <a class="txt2" href="/signup">
                 Sign Up
             </a>
         </div>
