--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -13,7 +13,7 @@
   <div class="chatbox-wrapper">
     <div id="messageBox" class="message-box">
       <div class="chat response">
-        <img src="../static/profile.jpg">
+        <img src="../static/musicrecco_chatbotprofile.png">
         <span>Hello there! <br> 
           How can I help you today.
         </span>
