--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -1,17 +1,18 @@
-*{
+* {
   padding: 0;
   margin: 0;
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
-body{
+body {
   width: 100%;
   height: 100vh;
   background-color: #fde6b6;
+  margin: 0; /* Remove default body margin */
 }
 
-.chat{
+.chat {
   display: flex;
   gap: 20px;
   padding: 25px;
@@ -22,17 +23,33 @@ body{
   margin-bottom: 10px; /* Add some space between chat bubbles */
 }
 
-.chat img{
+.chat img {
   width: 65px;
   height: 65px;
 }
 
-.response{
+.response {
   background-color: #ffc954d2;
   align-items: center; /* Center-align items vertically */
 }
 
-.messagebar{
+.suggestion-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  justify-content: center; /* Optional: Center the grid horizontally */
+  margin-bottom: 20px; /* Increase the bottom margin */
+  margin-top: -100px; /* Move the grid upwards */
+}
+
+.suggestion-box {
+  background-color: #ffc954d2;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.messagebar {
   position: fixed;
   bottom: 0;
   height: 5rem;
@@ -43,7 +60,7 @@ body{
   background-color: #f4b686;
 }
 
-.messagebar .bar-wrapper{
+.messagebar .bar-wrapper {
   background-color: #cdcdcd;
   border-radius: 5px;
   width: 60vw;
@@ -53,7 +70,7 @@ body{
   justify-content: space-between;
 }
 
-.bar-wrapper input{
+.bar-wrapper input {
   width: 100%;
   padding: 5px;
   border: none;
@@ -63,11 +80,11 @@ body{
   color: #000000;
 }
 
-.bar-wrapper input::placeholder{
+.bar-wrapper input::placeholder {
   color: #000000;
 }
 
-.messagebar button{
+.messagebar button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,7 +94,7 @@ body{
   cursor: pointer;
 }
 
-.message-box{
+.message-box {
   height: calc(100vh - 5rem);
   overflow-y: auto;
 }
@@ -85,4 +102,3 @@ body{
 .response-text {
   white-space: pre-line; /* or pre-wrap */
 }
-
