--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -11,6 +11,8 @@
 </head>
 <body>
   <div class="chatbox-wrapper">
+    <!-- Add the loading spinner here -->
+    <div id="loadingSpinner" class="spinner"></div>
     <div id="messageBox" class="message-box">
       <div class="chat response">
         <img src="../static/musicrecco_chatbotprofile.png">
