added rec hist button

--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -121,3 +121,26 @@ body {
 @keyframes spin {
   to { transform: rotate(360deg); }
 }
+
+.hist-button {
+  
+  cursor: pointer;
+  outline: 0;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 6px 12px;
+  font-size: 1rem;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  color: #000000;
+  border-color: #000000;
+  :hover {
+      color: #fff;
+      background-color: #000000;
+      border-color: #000000;
+  }
+}
