--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -17,6 +17,9 @@
       <div class="chat response">
         <img src="../static/musicrecco_chatbotprofile.png">
         <span>Hello there, I am MusicRecco! <br> Ask me all you want about music recommendations!</span>
+        <a href = 'recommended.html'>
+          <button class = 'hist-button'>Recommended History</button>
+        </a>
       </div>
     </div>
 
