--- a/templates/recommended.html
+++ b/templates/recommended.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Recommended History</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/history.css">
     <script src="script.js"></script>
 </head>
 <body>
