--- a/static/css/history.css
+++ b/static/css/history.css
@@ -6,9 +6,9 @@ table {
 th, td {
   padding: 8px;
   text-align: left;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #fde6b6;
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: #fde6b6;
 }
