modified rec page

--- a/templates/recommended.html
+++ b/templates/recommended.html
@@ -3,7 +3,7 @@
 <head>
     <title>Recommended History</title>
     <link rel="stylesheet" type="text/css" href="../static/css/history.css">
-    <script src="script.js"></script>
+    <script src="../static/rec_script.js"></script>
 </head>
 <body>
     <h1>Recommended History</h1>
