--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -8,7 +8,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background-color: ##FFFFF;
+  background-color: white;
   margin: 0; /* Remove default body margin */
 }
 
@@ -125,7 +125,6 @@ body {
 }
 
 .hist-button {
-  
   cursor: pointer;
   outline: 0;
   display: inline-block;
@@ -145,35 +144,4 @@ body {
       background-color: #000000;
       border-color: #000000;
   }
-}
-
-.sidebar {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color:#c8c8c8;;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
-.sidebar-button {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 15px;
-  color: #383838;
-  background-color: transparent;
-  border: none; 
-  cursor: pointer;
-  display: block;
-}
-
-.sidebar-button:hover {
-  color: #000000;
-}
-
-.sidebar-button:focus {
-  outline: none; 
 }
