--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -41,7 +41,7 @@ body {
   color: white;
   line-height: 70px;
   text-align: center;
-  background: #063146;
+  background: black;
 }
 
 .sidebar ul a {
