--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -8,7 +8,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background-color: white;
+  background-color: #f2f4f7;
   margin: 0; /* Remove default body margin */
 }
 
@@ -21,7 +21,7 @@ body {
   font-weight: 300;
   align-items: center; /* Center-align items vertically */
   margin-bottom: 10px; /* Add some space between chat bubbles */
-  margin-left: 160px;
+  margin-left: 230px; /* Adjusted to align with the sidebar */
 }
 
 .chat img {
@@ -30,9 +30,11 @@ body {
 }
 
 .response {
-  background-color: #fde6b6;
+  background-color:   rgb(132, 149, 167); /* Changed to a darker gray */
+  color: black; /* Changed to white */
   align-items: center; /* Center-align items vertically */
 }
+
 
 .suggestion-grid {
   display: grid;
@@ -41,14 +43,17 @@ body {
   justify-content: center; /* Optional: Center the grid horizontally */
   margin-bottom: 20px; /* Increase the bottom margin */
   margin-top: -100px; /* Move the grid upwards */
-  margin-left: 160px;
+  margin-left: 230px; /* Adjusted to align with the sidebar */
 }
 
 .suggestion-box {
-  background-color: #fde6b6;
+  margin-left: 30px;
+  background-color:   rgb(132, 149, 167); /* Changed to a darker gray */
+  color:black; 
   padding: 10px;
   border-radius: 5px;
   cursor: pointer;
+  width: 90%;
 }
 
 .messagebar {
@@ -56,20 +61,23 @@ body {
   bottom: 0;
   height: 5rem;
   width: 100%;
+  margin-left: 230px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fecca3;
+  background-color: rgb(132, 149, 167); /* Changed to a darker gray */
+  color: black;
 }
 
 .messagebar .bar-wrapper {
-  background-color: #cdcdcd;
+  background-color: white;
   border-radius: 5px;
   width: 60vw;
   padding: 10px;
   display: flex;
-  align-items: center;
+  align-items: center; /* Align items vertically */
   justify-content: space-between;
+  margin-right: 200px;
 }
 
 .bar-wrapper input {
@@ -79,11 +87,12 @@ body {
   outline: none;
   font-size: 14px;
   background: none;
-  color: #000000;
+  background-color: white; /* Changed to a darker gray */
+  color: black; 
 }
 
 .bar-wrapper input::placeholder {
-  color: #000000;
+  color: black; 
 }
 
 .messagebar button {
@@ -122,26 +131,4 @@ body {
 
 @keyframes spin {
   to { transform: rotate(360deg); }
-}
-
-.hist-button {
-  cursor: pointer;
-  outline: 0;
-  display: inline-block;
-  font-weight: 400;
-  line-height: 1.5;
-  text-align: center;
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: 6px 12px;
-  font-size: 1rem;
-  border-radius: .25rem;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  color: #000000;
-  border-color: #000000;
-  :hover {
-      color: #fff;
-      background-color: #000000;
-      border-color: #000000;
-  }
 }
