--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
   <title>Home Page</title>
   <link rel="stylesheet" href="../static/css/sidebar.css">
-  <link rel="stylesheet" href="../static/css/home.css">
+  <link rel="stylesheet" href="../static/css/dashboard.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+  <title>Dashboard Page</title>
+  <link rel="icon" type="image/png" href="../static/musicrecco.png"/>
 </head>
 <body>
     <div class="sidebar">
@@ -24,48 +27,19 @@
                 <li><a href="#" onclick="redirectTo('logout')"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
             </ul>
         </div>
-    </div>
+    </div>     
     
-    ### Place Holder Still in testing
     <div class="main-container">
-        <header>Welcome <span id="username">...</span></header>
+        <header>Welcome! Here are your reccommendations for the day!</header>
         <div class="recommendations">
+            {% for recommendation in track_info_list %}
             <div class="recommendation">
-                <img src="album_link_1.jpg" alt="Album 1">
-                <h2>Album Title 1</h2>
+                <img src="{{ recommendation.image_url }}" alt="{{ recommendation.track_name }}">
+                <h2>{{ recommendation.track_name }}</h2>
             </div>
-            <div class="recommendation">
-                <img src="album_link_2.jpg" alt="Album 2">
-                <h2>Album Title 2</h2>
-            </div>
-            <div class="recommendation">
-                <img src="album_link_3.jpg" alt="Album 3">
-                <h2>Album Title 3</h2>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </body>
-<script>
-    function redirectTo(page) {
-        switch (page) {
-            case 'home':
-                window.location.href = '/home';
-                break;
-            case 'chatbot':
-                window.location.href = '/chatbot';
-                break;
-            case 'history':
-                window.location.href = '/recommended';
-                break;
-            case 'settings':
-                window.location.href = '/settings';
-                break;
-            case 'logout':
-                window.location.href = '/logout';
-                break;
-            default:
-                console.log('Invalid page');
-        }
-    }
-</script>
+<script src="../static/script/sidebar script.js"></script>
 </html>
