dashboard can click and redirect to spotify

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -41,10 +41,10 @@
       </div>
 
       <div class="suggestion-grid">
-        <div class="suggestion-box">What are the top trending songs right now?</div>
+        <div class="suggestion-box">What are the top ranked songs?</div>
         <div class="suggestion-box">Can you recommend some upbeat pop songs for a workout playlist?</div>
         <div class="suggestion-box">Recommend me songs based on my favourite genres!</div>
-        <div class="suggestion-box">Surprise me!</div>
+        <div class="suggestion-box">Surprise me with some songs!</div>
       </div>
 
       <div class="messagebar">
