--- a/templates/recommended.html
+++ b/templates/recommended.html
@@ -39,7 +39,7 @@
             <tbody>
                 {% for recommendation in recommendations %}
                 <tr>
-                    <td><a href="{{ recommendation.web }}">{{ recommendation.song }}</a></td>
+                    <td><a href="{{ recommendation.Websites }}" target="_blank">{{ recommendation.song }}</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
